--- a/WindowsFormsApp1/Example_UI.csproj
+++ b/WindowsFormsApp1/Example_UI.csproj
@@ -67,6 +67,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CascadingDropdown.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CascadingDropdown.Designer.cs">
+      <DependentUpon>CascadingDropdown.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -88,6 +94,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuantableValue.cs" />
+    <EmbeddedResource Include="CascadingDropdown.resx">
+      <DependentUpon>CascadingDropdown.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -107,6 +116,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <Content Include="angular-cli-node-js-typescript-rxjs-compatiblity-matrix.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
