--- a/DosageDomainModel/Example_DosageDomainModel.csproj
+++ b/DosageDomainModel/Example_DosageDomainModel.csproj
@@ -61,9 +61,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ReactiveVariablesExtension\ReactiveVariablesExtension.csproj">
+    <ProjectReference Include="..\RIvarX\RIvarX.csproj">
       <Project>{92b8945d-e615-48af-8d66-628210c29d41}</Project>
-      <Name>ReactiveVariablesExtension</Name>
+      <Name>RIvarX</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
