--- a/RIvarX/RIvarX.csproj
+++ b/RIvarX/RIvarX.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{92B8945D-E615-48AF-8D66-628210C29D41}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ReactiveVariablesExtension</RootNamespace>
-    <AssemblyName>ReactiveVariablesExtension</AssemblyName>
+    <RootNamespace>RIvarX</RootNamespace>
+    <AssemblyName>RIvarX</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -54,7 +54,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignalExtension.cs" />
-    <Compile Include="SignalValue.cs" />
+    <Compile Include="Signal.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
