--- a/DosageDomainModel/Example_InfusionTherapy.csproj
+++ b/DosageDomainModel/Example_InfusionTherapy.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{84E9C32A-CF29-4F15-B6E7-A9136506A83E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DosageDomainModel</RootNamespace>
-    <AssemblyName>DosageDomainModel</AssemblyName>
+    <RootNamespace>Example_InfusionTherapy</RootNamespace>
+    <AssemblyName>Example_InfusionTherapy</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -52,9 +52,9 @@
   <ItemGroup>
     <Compile Include="Bag.cs" />
     <Compile Include="IBag.cs" />
-    <Compile Include="InfusedBag.cs" />
-    <Compile Include="DosageExtension.cs" />
-    <Compile Include="IOperand.cs" />
+    <Compile Include="Pump.cs" />
+    <Compile Include="RIvarBuildingBlocks\ExpressionsExtensions.cs" />
+    <Compile Include="RIvarBuildingBlocks\IOperand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -66,5 +66,6 @@
       <Name>RIvarX</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
