--- a/WindowsFormsApp1/Example_UI.csproj
+++ b/WindowsFormsApp1/Example_UI.csproj
@@ -136,9 +136,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DosageDomainModel\Example_DosageDomainModel.csproj">
+    <ProjectReference Include="..\DosageDomainModel\Example_InfusionTherapy.csproj">
       <Project>{84e9c32a-cf29-4f15-b6e7-a9136506a83e}</Project>
-      <Name>Example_DosageDomainModel</Name>
+      <Name>Example_InfusionTherapy</Name>
     </ProjectReference>
     <ProjectReference Include="..\RIvarX\RIvarX.csproj">
       <Project>{92b8945d-e615-48af-8d66-628210c29d41}</Project>
