--- a/RIvarX/RIvarX.csproj
+++ b/RIvarX/RIvarX.csproj
@@ -52,7 +52,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Expression.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RIvar.cs" />
     <Compile Include="SignalExtension.cs" />
     <Compile Include="Signal.cs" />
   </ItemGroup>
