--- a/WindowsFormsApp1/Example_UI.csproj
+++ b/WindowsFormsApp1/Example_UI.csproj
@@ -67,6 +67,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InfusionTherapy_UserControls.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InfusionTherapy_UserControls.Designer.cs">
+      <DependentUpon>InfusionTherapy_UserControls.cs</DependentUpon>
+    </Compile>
     <Compile Include="InfusionTherapy.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -88,6 +94,21 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuantableValue.cs" />
+    <Compile Include="UserControl_Bag.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControl_Bag.Designer.cs">
+      <DependentUpon>UserControl_Bag.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserControl_Pump.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControl_Pump.Designer.cs">
+      <DependentUpon>UserControl_Pump.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="InfusionTherapy_UserControls.resx">
+      <DependentUpon>InfusionTherapy_UserControls.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="InfusionTherapy.resx">
       <DependentUpon>InfusionTherapy.cs</DependentUpon>
     </EmbeddedResource>
@@ -107,6 +128,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UserControl_Bag.resx">
+      <DependentUpon>UserControl_Bag.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserControl_Pump.resx">
+      <DependentUpon>UserControl_Pump.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
