--- a/DrugAdministration/DrugAdministration.csproj
+++ b/DrugAdministration/DrugAdministration.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{84E9C32A-CF29-4F15-B6E7-A9136506A83E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Example_InfusionTherapy</RootNamespace>
-    <AssemblyName>Example_InfusionTherapy</AssemblyName>
+    <RootNamespace>DrugAdministration</RootNamespace>
+    <AssemblyName>DrugAdministration</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -54,7 +54,6 @@
     <Compile Include="IBag.cs" />
     <Compile Include="Pump.cs" />
     <Compile Include="Operators.cs" />
-    <Compile Include="IOperand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
