--- a/RIvarX/RIvarX.csproj
+++ b/RIvarX/RIvarX.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{92B8945D-E615-48AF-8D66-628210C29D41}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RIvarX</RootNamespace>
-    <AssemblyName>RIvarX</AssemblyName>
+    <RootNamespace>RIVarX</RootNamespace>
+    <AssemblyName>RIVarX</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
